<resources>
    <string name="app_name">DemoProject</string>
    <string name="welcome">Welcome </string>
    <string name="quote">\" In a world of finite resources, the true measure of innovation lies not in its complexity, but in its capacity to simplify and empower the human mind.</string>
    <string name="signup">Sign-up</string>
    <string name="signin">Sign-in</string>
    <string name="terms">Term</string>
    <!-- res/values/strings.xml -->
    <string name="terms_underlined"><![CDATA[<u>Terms</u>]]></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="search">Search...</string>
    <string name="technology">. technology</string>
    <string name="technologys"> Technology</string>
    <string name="step">Step Into Tomorrow:</string>
    <string name="notes">Step Into Tomorrow: Exploring Special Computing Impact On Industries and the metaverse.</string>
    <string name="date">28 Aug 2024</string>
    <string name="recent">Recent Articles</string>
    <string name="viewAll">View all</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="dates">Date</string>
    <string name="article">Article</string>
    <string name="intro">Intro</string>
    <string name="now">Now: Enterprises</string>
    <string name="texts">Introduction</string>
    <string name="a">A</string>
    <string name="mainNote">This is a complete sentence that will align with the height of the letter A on the left side and span multiple lines.</string>
    <string name="newsentence">\"Regular car maintenance ensures top-notch performance, extends the vehicle\'s lifespan, and enhances safety on the road. High-quality vehicles require consistent care, including timely oil changes, brake inspections, and tire rotations. Proper maintenance helps prevent unexpected breakdowns, reduces repair costs, and maintains optimal fuel efficiency. By keeping the engine clean and ensuring all systems are functioning correctly, car owners can enjoy a smooth driving experience. Quality cars, when well-maintained, retain their value and provide a reliable mode of transportation. Attention to detail in upkeep helps detect minor issues before they become major problems. This proactive approach not only enhances the car\'s reliability but also contributes to a safer driving environment. Investing in quality parts and skilled mechanics further guarantees that the vehicle remains in excellent condition.\"</string>
    <string name="spatial">Spatial \nComputing</string>
    <string name="industrial">Industrial \nMetaverse</string>
    <string name="arretail">AR in Reatils</string>
    <string name="digital">Digital \nInteraction.</string>
    <string name="related">Related Article</string>

</resources>