<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    android:orientation="vertical">

    <!-- Horizontal Layout for ImageViews -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/appBack"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/back"
                android:contentDescription="Back Icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/appRightIcon"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/ic_app_logo"
                android:contentDescription="Right Icon"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

    </LinearLayout>

    <!-- Wrapping content in ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:fontFamily="@font/strawford_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp"
                android:fontFamily="@font/strawford_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="#929292"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_regular"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="#929292"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_regular"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dates"
                    android:layout_marginStart="20dp"
                    android:textColor="#929292"
                    android:textSize="16sp"
                    android:fontFamily="@font/strawford_regular"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/article"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/technologys"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
            </LinearLayout>


                <!-- Using RelativeLayout to position the icons and the ImageView -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/download">

                    <!-- Left Icon -->
                    <ImageView
                        android:id="@+id/leftIcon"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_margin="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/downdesk"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="Left Icon"
                    android:background="@android:color/transparent"
                        tools:ignore="HardcodedText" />

                    <!-- Right Icon -->
                    <ImageView
                        android:id="@+id/rightIcon"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/share"
                       android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                    android:contentDescription="Right Icon"
                    android:background="@android:color/transparent"
                        tools:ignore="HardcodedText" />


                </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/texts"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/strawford_medium"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/letterA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="150sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/strawford_black"
                    tools:ignore="HardcodedText" /> <!-- Use your preferred font -->

                <TextView
                    android:id="@+id/sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mainNote"
                    android:textSize="18sp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="-90dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/strawford_regular"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:id="@+id/sentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newsentence"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-39dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/strawford_regular"
                android:gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/spatial"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/industrial"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/spatial"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/industrial"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/digital"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_background"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/arretail"
                        android:textSize="12sp"
                        android:fontFamily="@font/strawford_black" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/strawford_bold"
                android:textColor="#000000"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                tools:listitem="@layout/item_card" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
