<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Top Section with Logo and Texts -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_app_logo"
        android:layout_marginTop="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="25dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/strawford_black"
        android:paddingBottom="24dp"
        android:textSize="25sp"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/scilla_regularitalic"
        android:textSize="18sp"
        android:layout_marginStart="35dp" />

    <!-- Spacer to push content down -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Bottom Section with Buttons and Terms Text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Sign-up"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textSize="16sp"
            android:fontFamily="@font/strawford_light"
            android:textColor="@color/white"
            android:background="@drawable/btn_signup_background"
            android:backgroundTint="@null"
            android:layout_marginTop="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/strawford_regular"
            android:background="@drawable/btn_signin_background"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/strawford_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:text="@string/terms_underlined"
            android:textColor="#4E4C4C" />
    </LinearLayout>
</LinearLayout>
