<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    android:orientation="vertical">

    <!-- Horizontal Layout for ImageView and SearchView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/ic_app_logo"
            android:contentDescription="App Logo"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/customSearchView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search_background"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:textColorHint="#4E4C4C"
                android:fontFamily="@font/strawford_regular"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:padding="4dp"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_search_24"
                android:contentDescription="Search Icon"
                android:layout_marginEnd="8dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <!-- Wrapping content in ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                tools:listitem="@layout/item_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent"
                android:fontFamily="@font/strawford_bold"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewVertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                tools:listitem="@layout/card_item_2"/>

            <RelativeLayout
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/search_background"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/viewAll"
                    android:textSize="12sp"
                    android:fontFamily="@font/strawford_black" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:background="?attr/colorPrimary"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>
